--- a/statsreview.tex
+++ b/statsreview.tex
@@ -10,6 +10,8 @@
 \usepackage{pgfplots,pgf-pie}
 \usepackage{wrapfig}
 \usepackage{booktabs}
+
+\usepgfplotslibrary{statistics}
  
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[section]
