--- a/chp1/figs/fig3.tex
+++ b/chp1/figs/fig3.tex
@@ -4,14 +4,16 @@
   \caption{An example of a relative frequency bar graph}
   \begin{tikzpicture}
     \begin{axis}[
+      title={Sex of respondents},
       ybar,
+      bar width=15pt,
       enlarge x limits=0.3,
-      ylabel={Percent of participants},
+      ylabel={\% of participants},
       symbolic x coords={Male,Female},
       xtick=data,
       ymin=0,
       width=4cm,
-      height=4.5cm,
+      height=4.3cm,
     ]
     \addplot coordinates {(Male,56.52) (Female,43.48)};
     \end{axis}
